[package]
name = "drop-renamer"
version = "0.0.4"
description = "Simple app for: drag-drop files to rename with some regex pattern."
authors = ["sftblw@forcs.com"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "updater", "fs-exists", "fs-remove-file", "path-all", "fs-read-dir", "fs-read-file", "fs-create-dir", "fs-write-file", "fs-rename-file", "shell-open", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
